2012-12-01  Xiaobo Wang  <xiaobo.wang@torchmobile.com.cn>

        DRT - crashed in WebCore::SearchFieldCancelButtonElement::defaultEventHandler
        https://bugs.webkit.org/show_bug.cgi?id=103592

        Reviewed by Kent Tamura.

        The crash happened when the search field cancel button handles mouseout
        event after the search input was detached. When it happens the input
        element returned from shadowHost() is null, need to check the pointer
        before dereferencing.
        InputFieldSpeechButton and SearchFieldResultsButtonElement have the
        similar issue.

        No new tests. The patch fixes the following test on BlackBerry platform.
        Test: fast/forms/search-delete-while-cancel-button-clicked.html

        * html/shadow/TextControlInnerElements.cpp:
        (WebCore::SearchFieldResultsButtonElement::defaultEventHandler):
        (WebCore::SearchFieldCancelButtonElement::defaultEventHandler):
        (WebCore::SearchFieldCancelButtonElement::willRespondToMouseClickEvents):
        (WebCore::InputFieldSpeechButtonElement::defaultEventHandler):
        (WebCore::InputFieldSpeechButtonElement::willRespondToMouseClickEvents):
        (WebCore::InputFieldSpeechButtonElement::setRecognitionResult):

2012-11-30  Mike West  <mkwst@chromium.org>

        CSP 1.1: Make the CSP_NEXT flag runtime enabled.
        https://bugs.webkit.org/show_bug.cgi?id=103652

        Reviewed by Adam Barth.

        Content Security Policy 1.1 continues to live behind the CSP_NEXT flag,
        this patch adds another layer on top of that in order to enable runtime
        decisions about whether it should be active.

        * bindings/generic/RuntimeEnabledFeatures.cpp:
        (WebCore):
        * bindings/generic/RuntimeEnabledFeatures.h:
        (RuntimeEnabledFeatures):
        (WebCore::RuntimeEnabledFeatures::experimentalContentSecurityPolicyFeaturesEnabled):