@@ -1,3 +1,15 @@
+2012-12-01  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r136015.
+        http://trac.webkit.org/changeset/136015
+        https://bugs.webkit.org/show_bug.cgi?id=103821
+
+        Did not heal performance bot and caused other performance
+        regressions (Requested by abarth on #webkit).
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+        (GenerateHeader):
+
 2012-12-01  Xiaobo Wang  <xiaobo.wang@torchmobile.com.cn>
 
         DRT - crashed in WebCore::SearchFieldCancelButtonElement::defaultEventHandler
